# football-mangement-project

./: .gitignore  .gitmodules  Database.sql  README.md  lauch.sh  privileges.txt
CLI/: CMakeLists.txt
CLI/HEADER_FILES/: query.h
CLI/SOURCE_FILES/: connect.cpp  data.txt  main.cpp  query_1st.cpp  query_2nd.cpp  query_3rd.cpp  query_4th.cpp  query_7th.cpp  query_8th.cpp
Data/: away.csv  backup0605.sql  backup0805.sql  club.csv  detailts.md  football-managerManagement.csv  football-managerManager.csv  football-managerclub.csv  football-managerhome_away.csv  football-managerleague.csv  football-managermatch.csv  football-managernation.csv  football-managerparticipation.csv  football-managerplayer-honours.csv  football-managerplayer-role.csv  football-managerplayer_profile.csv  football-managerplayer_statics.csv  home.csv  management.csv  manager.csv  match.csv  nation.csv  participation.csv  player_profile.csv  player_role.csv  query-fm.txt  querylist.sql  querylist.txt  querytest.sql  score.csv  squad.csv  tablelist.sql
GUI/user/backend/: db.config.js  package-lock.json  package.json  pnpm-lock.yaml  server.js
GUI/user/backend/controllers/: testcontroller.js
GUI/user/fontend/footballweb/: package-lock.json  package.json
